# tokonami_mint

./: readme.md
analytics/: _metadata.json  all.json  analyze_metadata.js  call_contract_function.js  onlyMintedList.json  package-lock.json  package.json
deploy_scripts/: package-lock.json  package.json
deploy_scripts/deploy/: _connect.js  _contract_object.js  call_contract_function.js
json_generation/: extract_for_chain.js  extract_for_ipfs.js  package-lock.json  package.json
json_generation/chain_json/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+2291 more)
json_generation/json/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+2293 more)
json_generation/new_json/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  (+2325 more)
nft_contract/: Cargo.toml
nft_contract/src/: lib.rs
nft_contract/tests/sim/: main.rs
src/: lib.rs
(+7 files in other folders)
